--- a/angular/src/app/header/header.component.scss
+++ b/angular/src/app/header/header.component.scss
@@ -8,6 +8,7 @@ nav {
 	background-color: $a2;
 	width: 100%;
 	box-shadow: 0px 0px 10px #13191f;
+	z-index:10;
 
 	ul {
 		list-style:none;
@@ -17,6 +18,10 @@ nav {
 		vertical-align: middle;
 		width: 100%;
 		display: flex;
+
+		@media screen and (max-width: $headbreak) {
+    		display:block;
+  		}
 
 		a, a:active, a:visited, a:focus{
 			flex: 1 1 15%;
@@ -70,7 +75,96 @@ nav {
 				}	
 
 			}
+
+			&.title-button {
+				display:block;
+				background-color:$a2;
+
+				@media screen and (max-width: $headbreak) {
+    				display:none;
+    				opacity: 0;
+    				height:0;
+    				border-top:1px solid #e67c89;
+  				}
+
+  				&.show-title {
+  					display: block;
+  					height: auto;
+  					opacity: 1;
+  					-webkit-animation: fadeIn .25s;
+    				animation: fadeIn .25s;
+  					-webkit-animation: fadeInHeight .25s;
+    				animation: fadeInHeight .25s;
+  				}
+
+			}
+
+			&.menu-button {
+				@media screen and (min-width: $headbreak) {
+    				display:none;
+  				}
+
+  				width:60px;
+  				display:inline-block;
+  				text-align: center;
+  				float: right;
+  				margin-top: -60px;
+
+
+  				i {
+  					text-align: center;
+				    line-height: 60px;
+				    font-size: 30px;
+  				}
+
+  				&:hover {
+  					color:white;
+  					cursor: pointer;
+  					background-color: $a3;
+  				}
+
+			}
 		}
 	}
 
+}
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@-webkit-keyframes fadeInHeight {
+    0% { height: 0; }
+
+    100% { height: 100%; }
+}  
+@keyframes fadeInHeight {
+    0% { height: 0; }
+
+    100% { height: 100%; }
+}
+
+@-webkit-keyframes fadeOut {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeOut {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@-webkit-keyframes fadeOutHeight {
+    0% { height: 100%; }
+
+    100% { height: 0; }
+}  
+@keyframes fadeOutHeight {
+    0% { height: 100%; }
+
+    100% { height: 0; }
 }
