add footer, side widget, setup hello

--- a/angular/src/app/colors.scss
+++ b/angular/src/app/colors.scss
@@ -3,11 +3,11 @@
 
 // COLORS 
 
-$a1:#D7263D;
-$a2: #e86d7d;
-$a3: #d04153;
+$a1:green;
+$a2: #308c30;
+$a3: #46a346;
 
-$b1:#02182B;
+$b1:#29545b;
 
 $c1: #0197F6;
 
