--- a/angular/src/app/hello/hello.component.html
+++ b/angular/src/app/hello/hello.component.html
@@ -1,12 +1,29 @@
 <p>
-	<span class='special'>K</span>ev<span class='special'>y</span>n Hale
+	Kevyn Hale
 	<br>
 	<span class="white">
 		<span class="gold">Design</span>, 
 		<span class="purple">Devops</span>, 
 		 <span class="orange">Development</span>
 	</span>
-	“<span class="style">Freelance</span>
-	<br>
-	<span class="style">Extraordinaire</span>”
 </p>
+<div class="circles">
+	<div class="outer">
+		<div class="gutter"></div>
+		<div class="inner">
+		</div>
+		<div class="gutter"></div>
+	</div>
+	<div class="outer">
+		<div class="gutter"></div>
+		<div class="inner">
+		</div>
+		<div class="gutter"></div>
+	</div>
+	<div class="outer">
+		<div class="gutter"></div>
+		<div class="inner">
+		</div>
+		<div class="gutter"></div>
+	</div>
+</div>
