--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -10,7 +10,7 @@ body {
 	padding: 0px;
 	margin: 0px;
 	//background-color: $b1;
-	background-color: #273542;
+	background-color: $a3;
 	height:100%;
 	width:100%;
 }
