--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-header></app-header>
+<app-sideicons></app-sideicons>
 <div class='body'>
-	<router-outlet></router-outlet>
+	<div>
+		<router-outlet></router-outlet>
+	</div>
 </div>
+<footer>
+	<app-footer></app-footer>
+</footer>
