--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -1,6 +1,20 @@
+@import 'colors';
+
 .body {
+	
+	position:relative;
 	margin-top:60px;
-	position:absolute;
 	width: 100%;
-	height: calc(100% - 60px);
+	height: auto;
+	background-color: $b1;
+	padding-bottom:15px;
+	padding-top:15px;
+
+	div {
+		margin-left: 45px;
+		margin-right: 45px;
+		min-height:calc(100% - 100px);
+		//background-color:white;
+
+	}
 }
