--- a/angular/src/app/hello/hello.component.scss
+++ b/angular/src/app/hello/hello.component.scss
@@ -40,3 +40,51 @@ p {
 		font-weight:100;
 	}
 }
+
+div.circles {
+	display:flex;
+	max-width: 100%;
+	@media screen and (max-width: 710px) {
+		display:block;
+	}
+
+	.outer {
+		flex: 1;
+		display: flex;
+		margin-bottom:30px;
+
+		.inner {
+			flex: 1;
+			max-width: 300px;
+			min-width: 300px;
+			margin-right:10px;
+			height: 300px;
+			background-color: white;
+			border-radius:50%;
+
+			@media screen and (max-width: 1010px) {
+				max-width: 250px;
+				min-width: 250px;
+				height: 250px;
+			}
+
+			@media screen and (max-width: 860px) {
+				max-width: 200px;
+				min-width: 200px;
+				height: 200px;
+			}
+
+			@media screen and (max-width: 710px) {
+				max-width: 300px;
+				min-width: 300px;
+				height: 300px;
+			}
+		}
+		.gutter {
+			flex: 1;
+		}
+
+	}
+
+
+}
