move in blog module to use wp api

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -21,7 +21,7 @@
  		<a routerLink="/about" routerLinkActive="selected" class="title-button" [class.show-title]="showTitle">
  			<li>ABOUT</li>
  		</a>
- 		<a href="http://blog.kydeveloper.com" class="title-button" [class.show-title]="showTitle">
+ 		<a routerLink="/blog" routerLinkActive="selected" class="title-button" [class.show-title]="showTitle">
  			<li>BLOG</li>
  		</a>
  	</ul>
