--- a/angular/src/app/blog/blog.component.scss
+++ b/angular/src/app/blog/blog.component.scss
@@ -1,1 +1,16 @@
 @import '../colors';
+
+.blog-body {
+	background-color:white;
+	width: 100%;
+	height:auto;
+	min-height:500px;
+	margin: -15px -45px -15px -45px;
+	padding: 15px 45px 15px 45px;
+	position:relative;
+
+	.inner {
+		height:500px;
+
+	}
+}
