--- a/angular/src/app/blog/all/preview/blog-all-preview.component.html
+++ b/angular/src/app/blog/all/preview/blog-all-preview.component.html
@@ -1,5 +1,21 @@
-<div>
-	<div><h3>{{post.title.rendered}}</h3></div>
-	<div>{{post.date}}</div>
-	<div [innerHTML]="post.content.rendered"></div>
+<div class="post">
+	<div class="gutter"></div>
+		<div class="middle">
+			<div class="featureimage">
+				<img src="{{post._embedded['wp:featuredmedia'][0].source_url}}">
+			</div>
+			<div class="middlegutter"></div>
+			<div class="postdetails">
+				<div class="date">{{post.date}}</div>
+				<div class="title">{{post.title.rendered}}</div>		
+				<!-- <div>{{post._embedded.author[0].name}}</div> -->
+				<div class="body" [innerHTML]="post.excerpt.rendered"></div>
+				<div class="tags">
+					<ul>
+						<li *ngFor="let tag of post._embedded['wp:term'][1]" >{{tag.name}}</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	<div class="gutter"></div>
 </div>
