--- a/angular/src/app/colors.scss
+++ b/angular/src/app/colors.scss
@@ -17,3 +17,52 @@ $d1: #448FA3;
 $e1: #68C5DB;
 
 $headbreak: 750px;
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@-webkit-keyframes fadeInHeight {
+    0% { height: 0; }
+
+    100% { height: 100%; }
+}  
+@keyframes fadeInHeight {
+    0% { height: 0; }
+
+    100% { height: 100%; }
+}
+
+@-webkit-keyframes fadeOut {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeOut {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
+@-webkit-keyframes fadeOutHeight {
+    0% { height: 100%; }
+
+    100% { height: 0; }
+}  
+@keyframes fadeOutHeight {
+    0% { height: 100%; }
+
+    100% { height: 0; }
+}
+
+@-webkit-keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
+    }
+}
