format single post

--- a/angular/src/app/colors.scss
+++ b/angular/src/app/colors.scss
@@ -18,6 +18,8 @@ $e1: #68C5DB;
 
 $headbreak: 750px;
 
+$light: #d6d6d6;
+
 @-webkit-keyframes fadeIn {
     from { opacity: 0; }
       to { opacity: 1; }
