--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -6,7 +6,7 @@
 	margin-top:60px;
 	width: 100%;
 	height: auto;
-	background-color: $b1;
+	background-color: white;
 	padding-bottom:15px;
 	padding-top:15px;
 
