--- a/angular/src/app/pages/hello/hello.component.scss
+++ b/angular/src/app/pages/hello/hello.component.scss
@@ -61,6 +61,7 @@ div.circles {
 			height: 300px;
 			background-color: white;
 			border-radius:50%;
+			border:1px solid gray;
 
 			@media screen and (max-width: 1010px) {
 				max-width: 250px;
