--- a/angular/src/app/pages/skills/skills.component.scss
+++ b/angular/src/app/pages/skills/skills.component.scss
@@ -3,11 +3,11 @@
 .row {
 	background-color:#dadada;
 	display:flex;
-	width:calc(100% + 70px);
-	max-width:calc(100% + 70px);
+	width:calc(100% + 0px);
+	max-width:calc(100% + 0px);
 	overflow:hidden;
 	margin-left:-45px;
-	padding:0px 10px;
+	padding:0px 45px;
 	margin-bottom:20px;
 	flex-wrap:wrap;
 
@@ -34,7 +34,7 @@
 
 
 .chart-cont {
-	max-width:50%;
+	max-width:calc(50% - 45px);
 	height:auto;
 	@media screen and (max-width: 650px) {
 		max-width: 100%;
