set up bars to use service for set

--- a/angular/src/app/pages/skills/skill-section/skill-section-bar.component.html
+++ b/angular/src/app/pages/skills/skill-section/skill-section-bar.component.html
@@ -1,5 +1,5 @@
 <div class="row">
 	<div *ngFor="let skill of skills" class="image">
-	<img  src="{{skill.image}}" height='50'>
+	<img  src="{{skill.image}}">
 	</div>
 </div>
