set up skills description section

--- a/angular/src/app/pages/skills/skill-section/barchart.component.html
+++ b/angular/src/app/pages/skills/skill-section/barchart.component.html
@@ -10,7 +10,7 @@
 
 	<div class="bars">
 		<ul>
-			<li *ngFor="let skill of data" class='bar' [style.width.px]="skill.width" [class.selected]="skill.name == set">
+			<li *ngFor="let skill of data" class='bar' [style.width.px]="skill.width" [class.selected]="skill.name == set" (click)="setSkill(skill.name)">
 
 			</li>
 		</ul>
