--- a/angular/src/app/pages/skills/skill-section/skill-section.component.scss
+++ b/angular/src/app/pages/skills/skill-section/skill-section.component.scss
@@ -13,11 +13,45 @@
 	}
 }
 
-.chart-cont {
-	max-width:calc(50% - 45px);
-	height:auto;
+.skills {
+
+	width: 100%;
+	display:flex;
+	position:relative;
+	.chart-cont {
+		flex: 1 1 49%;
+		max-width:49%;
+		height:auto;
+	}
+
+	.gutter {
+		flex: 1 1 2%;
+		max-width:2%;
+	}
+
+	.single-skill {
+		flex: 1 1 49%;
+		max-width:49%;
+		clear:both;
+	}
+
 	@media screen and (max-width: 650px) {
-		max-width: 100%;
+
+		display:block;
+		.chart-cont {
+			background-color:red;
+			max-width:100%;
+		}	
+
+		.gutter {
+			display:none;
+		}
+
+		.single-skill {
+			width:100%;
+			max-width:100%;	
+			background-color:blue;
+		}
 
 	}
 }
