setup skill desc with arrows

--- a/angular/src/app/pages/skills/skill-section/skill-description.component.html
+++ b/angular/src/app/pages/skills/skill-section/skill-description.component.html
@@ -1,1 +1,5 @@
-<div class="title">{{set}}</div>  
+<div class="title">
+	<span class="arrow left" (click)="setPrev()"><</span>
+	<span class="words">{{set}}</span>
+	<span class="arrow right" (click)="setNext()">></span>
+</div>  
