add disqus module for blog

--- a/angular/src/app/pages/blog/single/blog-single.component.html
+++ b/angular/src/app/pages/blog/single/blog-single.component.html
@@ -9,6 +9,8 @@
 		</div>
 	<div class="gutter"></div>
 </div>
+<disqus [shortname]="shortname" [identifier]="post.id" ></disqus>
+
 
 <div *ngIf="invalid">
 	<div class="error">
