set up skill search and anchors

--- a/angular/src/app/pages/skills/skill-section/skill-section.component.html
+++ b/angular/src/app/pages/skills/skill-section/skill-section.component.html
@@ -1,4 +1,5 @@
 <app-skill-section-bar [skills]="skills"></app-skill-section-bar>
+<a name="{{type}}" id='{{type}}'></a>
 <div class='title' [class.hide]="skills.length == 0">
 {{type}}
 </div>
