--- a/angular/src/app/pages/skills/skills.component.scss
+++ b/angular/src/app/pages/skills/skills.component.scss
@@ -62,24 +62,118 @@
 	    	margin:0 auto;
 	    	position: relative;
 	    	transition: width .5s, max-height 0.5s;	
+	    	@media screen and (max-width: 650px) {
+				width: 100%;
+			}
 
 	    	div.center {
 	    		width:100%;
 		    	input {
-		    		width: 100%;
+		    		width: calc(100% - 85px);
 				    padding: 5px;
-				    font-size: 18px;
+				    padding-left:80px;
+				    font-size: 25px;
 				    border-radius: 5px;
 				    border: 0px;
 				    background-color: white;
+				    border: 2px solid #3a737c;
+				    padding-top: 5px;
+					padding-bottom: 5px;
+				    color: #308c30;
+					font-weight: 300;
+
+				    &:focus {
+				    	outline:none;
+				    }
 		    	}
 
-		    	span {
-		    		display:none;
-		    	}
 		    	i {
 		    		display:none;
 		    	}
+
+		    	span {
+		    			font-family: 'Exo', sans-serif;
+    					color: #46a346;
+    					line-height:58px;
+    					font-size:18px;
+						position:absolute;	
+						left:5px;
+						display:inline;
+						font-weight:bold;
+						i {
+							position:relative;
+							display:inline;
+							top:5px;
+						}
+					}	
+
+
+				div.dropdown {
+				    position: relative;
+				    background-color: white;
+				    border:0px;
+				    width: 100%;
+				    top: -4px;
+				    height: 0px;
+				    overflow: hidden;
+				    max-height:0px;
+				    -webkit-transition: ease max-height 0.8s;
+					-moz-transition: ease max-height 0.8s;
+					transition: ease max-height 0.8s;
+					color:black;
+
+				    &.show-dropdown {
+				    	height:auto;
+				    	overflow-y:scroll;
+				    	border: 2px solid #3a737c;
+				    	height:250px;
+				    	max-height:250px;
+				    	z-index:13;
+				    }
+
+				    div.loading {
+				    	position:absolute;
+				    	width:100%;
+				    	height: calc(100% - 75px);
+				    	background-color:white;
+				    	z-index:15;
+				    	padding-top:75px;
+				    	opacity:0;
+				    	display:none;
+				    	transition: ease opacity 1s;
+
+				    	img {
+				    		margin: auto;
+				    		display:block;
+				    		height:50%;
+				    		width: 50%;
+				    	}
+
+				    	&.show-loading {
+				    		opacity:1;
+				    		display:block;
+
+				    	}
+				    }
+				    div.skillrow {
+				    	padding:3px 10px;
+				    	font-family:sans-serif;
+				    	font-size: 20px;
+				    	&:hover {
+				    		background-color:rgba(0, 128, 0, 0.30);
+				    		cursor:pointer;
+				    	}
+				    	img {
+				    		position:relative;
+				    		top:2px;
+				    	}
+				    	div.count {
+				    		color:gray;
+				    		display:inline-block;
+				    	}
+				    }
+				}
+		    	
 	    	}
 	    }
 
@@ -98,7 +192,7 @@
     			max-height: 50px;
 			    z-index: 13;
 			    background-color: #ebebeb;
-			    overflow: hidden;
+			    //overflow: hidden;
 
 	    		div.center {
 	    			width:60%;
@@ -115,12 +209,12 @@
 					}
 
 		    		input {
-		    			width: calc(100% - 135px);
+		    			width: calc(100% - 133px);
 					    height: 38px;
 					    border-top: 0px;
 					    border-left: 0px;
 					    border-right: 0px;
-					    border-bottom: 5px solid #d6d6d6;
+					    border-bottom: 2px solid #d6d6d6;
 					    font-size: 30px;
 					    background-color: #ebebeb;
 					    padding-left: 90px;
@@ -167,20 +261,44 @@
 					i.loading-hide {
 						opacity: 0;
 					}
+
+					div.dropdown {
+						height:500px;
+						
+
+						&.show-dropdown {
+							border: 1px solid $c1;
+							border-top: 2px solid $c1;
+							top:-6px;
+						}
+
+						div.skillrow {
+							line-height:normal;
+						}
+					}
 	    		}
 	    	}
 
 	    	&.hide-nav {
 				max-height:0px;
+				overflow:hidden;
 
 				div.search {
 					max-height:0px;
+					div.center {
+						input {
+							max-height:0px;
+						}
+						div.dropdown {
+							max-height:0px;
+						}
+					}
 				}
 			}
 	    }
 	}
     div.buttons {
-    	margin-bottom:15px;
+    	margin-bottom:60px;
     	ul {
     		margin:0px;
     		padding:0px;
@@ -189,8 +307,14 @@
     		a {
 				    font-family: 'Play', sans-serif;
 				    color: transparent;
+				    text-decoration:none;
+
+				    &:active, &:focus, &:visited {
+				    	text-decoration:none;
+				    }
     			li {
-    				display:inline-block;
+    				display: table;
+    				margin: 15px auto;
     				padding: 3px 18px;
 				    border-radius: 20px;
 				    font-size:30px;
@@ -225,6 +349,7 @@
     @media screen and (max-width: 650px) {
 		div.title {
 			font-size:50px;
+			margin-bottom:40px;
 		}
 		div.buttons {
 			ul {
