--- a/angular/src/app/pages/skills/skills.component.scss
+++ b/angular/src/app/pages/skills/skills.component.scss
@@ -222,6 +222,7 @@
 					    transition: border 500ms linear;
 					    color: #308c30;
 					    font-weight: 300;
+					    border-radius:0px;
 
 					    &:focus, &:active {
 					    	outline:none;
