update local stuff

--- a/angular/src/app/pages/hello/hello.component.scss
+++ b/angular/src/app/pages/hello/hello.component.scss
@@ -24,6 +24,9 @@ p {
 		margin-top:25px;
 		display:block;
 		margin-bottom:10px;
+		@media screen and (max-width: 500px) {
+			font-size:40px;
+		}
 	}
 	span.orange {
 		color:orange;
@@ -44,7 +47,7 @@ p {
 div.circles {
 	display:flex;
 	max-width: 100%;
-	@media screen and (max-width: 710px) {
+	@media screen and (max-width: 600px) {
 		display:block;
 	}
 
@@ -55,34 +58,21 @@ div.circles {
 
 		.inner {
 			flex: 1;
-			max-width: 300px;
-			min-width: 300px;
+			width:50%;
 			margin-right:10px;
-			height: 300px;
 			background-color: white;
 			border-radius:50%;
 			border:1px solid gray;
 
-			@media screen and (max-width: 1010px) {
-				max-width: 250px;
-				min-width: 250px;
-				height: 250px;
+			.dummy {
+				margin-top:100%;
 			}
 
-			@media screen and (max-width: 860px) {
-				max-width: 200px;
-				min-width: 200px;
-				height: 200px;
-			}
-
-			@media screen and (max-width: 710px) {
-				max-width: 300px;
-				min-width: 300px;
-				height: 300px;
-			}
+			
 		}
 		.gutter {
 			flex: 1;
+			max-width:5%;
 		}
 
 	}
