--- a/angular/src/app/pages/hello/hello.component.html
+++ b/angular/src/app/pages/hello/hello.component.html
@@ -11,18 +11,21 @@
 	<div class="outer">
 		<div class="gutter"></div>
 		<div class="inner">
+			<div class="dummy"></div>
 		</div>
 		<div class="gutter"></div>
 	</div>
 	<div class="outer">
 		<div class="gutter"></div>
 		<div class="inner">
+			<div class="dummy"></div>
 		</div>
 		<div class="gutter"></div>
 	</div>
 	<div class="outer">
 		<div class="gutter"></div>
 		<div class="inner">
+			<div class="dummy"></div>
 		</div>
 		<div class="gutter"></div>
 	</div>
